support --illegal-access, --add-exports, --add-opens, fix font issue of alpine java image